--- a/README.textile
+++ b/README.textile
@@ -2,6 +2,8 @@ h1. Was macht dieses Skript?
 
 Dieses Skript lädt Helge-Schneider-Filme von http://www.dctp.tv herunter, extrahiert die Audiospur und schneidet minutenlangen, dissonanten Kokolores heraus. Am Ende befinden sich die fertigen MP3-Dateien in einem Verzeichnis names 'mp3'.
 
+Das Skript kann am Ende beliebig durch weitere URLs erweitert werden, optional auch mit Schnittangaben. Wird das Skript mehrmals ausgeführt, werden existierende Dateien nicht überschrieben, Videos werden auch nicht erneut heruntergeladen, solange sie noch nicht wieder gelöscht worden sind.
+
 h1. Voraussetzungen
 
 Entwickelt und getestet wurde das Skript unter Ubuntu 11.10. Mit dem folgenden Paket lassen sich alle nötigen Abhängigkeiten installieren (man muss die 'universe'-Quellen aktivieren):
