--- a/README.textile
+++ b/README.textile
@@ -15,6 +15,7 @@ Es kann hin und wieder passieren, dass einzelne Filme auf DCTP.tv (vorübergehen
 h1. Aktuelle Titelliste
 
 10 vor 11: Sendung vom 02.04.2012 - Dampfer kaputt!
+10 vor 11: Sendung vom 19.11.2012 - Salto Mortale der Philosophie
 Als Hobbyhistoriker in Berlin-Mitte - Ein Zeitzeuge mitten im Geschehen
 Beinahe wären wir Römer geworden - Wenn Varus gesiegt hätte!
 Das Fahrzeug ist die zweite Haut - Nicht-olympische Wagnisse
@@ -22,7 +23,7 @@ Der Eiersoldat - Am Tag der Invasion in der Normandie 1944
 Der Glücksvermittler - Eheanbahnung und Scheidung
 Der Hartbrettbohrer - Gipfelkonferenz in Brüssel
 Der Letzte der Nibelungen - Attilas Burg
-Der Neffe des Reeders Onassis - "Blind kann ich Geld zählen"
+Der Neffe des Reeders Onassis - Blind kann ich Geld zählen
 Der Schweinegrippe-General - Herausforderung für militärischen Sachverstand
 Der Unterwasserwanderer - Helge Schneider als Ozeanograf
 Die Mozart-Lüge - Helge Schneider als Wolfgang Amadeus
@@ -43,6 +44,7 @@ Hitlers Maske: MEIN FÜHRER - Wie trägt man das Gesicht des Führers?
 Ich bin eine Leseratte - Ich liebe Buchstaben, wo immer sie sind
 Ich war ein treuer Husar - Feldmarschall von Blücher
 Im Weltall braucht man keine Lesebrille - Helge Schneider und Peter Berling im Orbit
+News & Stories: Sendung vom 14.10.2012 - Ein Profi der analogen Welt
 Plattmachen ist meine Leidenschaft - Der Abrissunternehmer
 Schraube verloren, Werkzeug vergessen - Helge Schneider improvisiert im Weltraum
 Vom Henker zum aktiven Sterbehelfer - Helge Schneider als Roland von Stendhal
